@@ -29,12 +29,13 @@ my %WriteMakefileArgs = (
     "warnings" => 0
   },
   "TEST_REQUIRES" => {
+    "Dist::Zilla::App::Tester" => 0,
     "Dist::Zilla::Plugin::AutoVersion" => 0,
-    "Dist::Zilla::Util::Test::KENTNL" => "1.005000",
     "ExtUtils::MakeMaker" => 0,
     "File::Spec" => 0,
     "Test::DZil" => 0,
-    "Test::More" => "0.89"
+    "Test::More" => "0.89",
+    "Test::TempDir::Tiny" => 0
   },
   "VERSION" => "0.002013",
   "test" => {
@@ -46,8 +47,8 @@ my %WriteMakefileArgs = (
 my %FallbackPrereqs = (
   "Carp" => 0,
   "Dist::Zilla::App" => 0,
+  "Dist::Zilla::App::Tester" => 0,
   "Dist::Zilla::Plugin::AutoVersion" => 0,
-  "Dist::Zilla::Util::Test::KENTNL" => "1.005000",
   "Dist::Zilla::dumpphases::Theme::basic::blue" => 0,
   "ExtUtils::MakeMaker" => 0,
   "File::Spec" => 0,
@@ -57,6 +58,7 @@ my %FallbackPrereqs = (
   "Scalar::Util" => 0,
   "Test::DZil" => 0,
   "Test::More" => "0.89",
+  "Test::TempDir::Tiny" => 0,
   "Try::Tiny" => 0,
   "strict" => 0,
   "warnings" => 0
