@@ -1,6 +1,12 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 0.002013
+ [Added / test requires]
+ - Dist::Zilla::App::Tester
+ - Test::TempDir::Tiny
+
+ [Removed / test requires]
+ - Dist::Zilla::Util::Test::KENTNL 1.005000
 
 0.002012 2015-04-15T00:35:51Z
  [Changed / test requires]
