@@ -3,7 +3,9 @@ use warnings;
 
 use Test::More;
 use Test::DZil qw( simple_ini );
-use Dist::Zilla::Util::Test::KENTNL 1.005000 qw( dztest );
+use Path::Tiny qw( path );
+use Test::TempDir::Tiny qw( tempdir );
+use Dist::Zilla::App::Tester qw( test_dzil );
 
 # FILENAME: basic.t
 # CREATED: 04/13/15 11:22:34 by Kent Fredric (kentnl) <kentfredric@gmail.com>
@@ -13,9 +15,9 @@ delete local $ENV{ANSI_COLORS_DISABLED};
 {
   note "<< Testing -VersionProvider with AutoVersion + --color-theme";
   require Dist::Zilla::Plugin::AutoVersion;
-  my $test = dztest();
-  $test->add_file( 'dist.ini' => simple_ini( ['AutoVersion'] ) );
-  my $result = $test->run_command( [ 'dumpwith', '-VersionProvider', '--color-theme=basic::green' ] );
+  my $wd = tempdir('colored-green');
+  path($wd)->child('dist.ini')->spew( simple_ini( ['AutoVersion'] ) );
+  my $result = test_dzil( $wd, [ 'dumpwith', '-VersionProvider', '--color-theme=basic::green' ] );
   ok( ref $result, 'self-test executed with no args' );
   is( $result->error,     undef, 'no errors' );
   is( $result->exit_code, 0,     'exit == 0' );
@@ -25,9 +27,9 @@ delete local $ENV{ANSI_COLORS_DISABLED};
 {
   note "<< Testing invalid --color-theme";
   require Dist::Zilla::Plugin::AutoVersion;
-  my $test = dztest();
-  $test->add_file( 'dist.ini' => simple_ini( ['AutoVersion'] ) );
-  my $result = $test->run_command( [ 'dumpwith', '--color-theme=FAKE::FAKE' ] );
+  my $wd = tempdir('invalid-color');
+  path($wd)->child('dist.ini')->spew( simple_ini( ['AutoVersion'] ) );
+  my $result = test_dzil( $wd, [ 'dumpwith', '--color-theme=FAKE::FAKE' ] );
   ok( ref $result, 'self-test executed with no args' );
   isnt( $result->error, undef, 'errors found' ) and note explain $result->error;
   isnt( $result->exit_code, 0, 'exit != 0' );
