@@ -3,7 +3,9 @@ use warnings;
 
 use Test::More;
 use Test::DZil qw( simple_ini );
-use Dist::Zilla::Util::Test::KENTNL 1.005000 qw( dztest );
+use Path::Tiny qw( path );
+use Test::TempDir::Tiny qw( tempdir );
+use Dist::Zilla::App::Tester qw( test_dzil );
 
 # FILENAME: basic.t
 # CREATED: 04/13/15 11:22:34 by Kent Fredric (kentnl) <kentfredric@gmail.com>
@@ -12,9 +14,9 @@ use Dist::Zilla::Util::Test::KENTNL 1.005000 qw( dztest );
 local $ENV{ANSI_COLORS_DISABLED} = 1;
 {
   note "<< Testing -VersionProvider with no plugins";
-  my $test = dztest();
-  $test->add_file( 'dist.ini' => simple_ini() );
-  my $result = $test->run_command( [ 'dumpwith', '-VersionProvider' ] );
+  my $wd = tempdir();
+  path($wd)->child('dist.ini')->spew( simple_ini() );
+  my $result = test_dzil( $wd, [ 'dumpwith', '-VersionProvider' ] );
   ok( ref $result, 'self-test executed with no args' );
   is( $result->error,     undef, 'no errors' );
   is( $result->exit_code, 0,     'exit == 0' );
@@ -23,9 +25,9 @@ local $ENV{ANSI_COLORS_DISABLED} = 1;
 {
   note "<< Testing -VersionProvider with AutoVersion";
   require Dist::Zilla::Plugin::AutoVersion;
-  my $test = dztest();
-  $test->add_file( 'dist.ini' => simple_ini( ['AutoVersion'] ) );
-  my $result = $test->run_command( [ 'dumpwith', '-VersionProvider' ] );
+  my $wd = tempdir();
+  path($wd)->child('dist.ini')->spew( simple_ini( ['AutoVersion'] ) );
+  my $result = test_dzil( $wd, [ 'dumpwith', '-VersionProvider' ] );
   ok( ref $result, 'self-test executed with no args' );
   is( $result->error,     undef, 'no errors' );
   is( $result->exit_code, 0,     'exit == 0' );
@@ -35,9 +37,9 @@ local $ENV{ANSI_COLORS_DISABLED} = 1;
 {
   note "<< Testing Manually expanded -VersionProvider with AutoVersion";
   require Dist::Zilla::Plugin::AutoVersion;
-  my $test = dztest();
-  $test->add_file( 'dist.ini' => simple_ini( ['AutoVersion'] ) );
-  my $result = $test->run_command( [ 'dumpwith', 'Dist::Zilla::Role::VersionProvider' ] );
+  my $wd = tempdir();
+  path($wd)->child('dist.ini')->spew( simple_ini( ['AutoVersion'] ) );
+  my $result = test_dzil( $wd, [ 'dumpwith', 'Dist::Zilla::Role::VersionProvider' ] );
   ok( ref $result, 'self-test executed with no args' );
   is( $result->error,     undef, 'no errors' );
   is( $result->exit_code, 0,     'exit == 0' );
